veel aanpassingen